// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxGroup custom theme 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa kWHzuf sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX ePgJmC"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup defaultValue renders 1`] = `
<DocumentFragment>
  <div
    class="sc-beqWaB ePBzUb"
  >
    <div
      class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
      role="group"
    >
      <label
        class="sc-eDDNvR fuPXtt"
      >
        <div
          class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        >
          <input
            checked=""
            class="sc-jTrPJq lbEfvE"
            type="checkbox"
          />
          <div
            class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
          >
            <svg
              class="sc-hLseeU cULchQ"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <path
                d="M6,11.3 L10.3,16 L18,6.2"
                fill="none"
              />
            </svg>
          </div>
        </div>
        <span>
          First
        </span>
      </label>
      <div
        class="sc-dmqHEX kOYIyd"
      />
      <label
        class="sc-eDDNvR fuPXtt"
      >
        <div
          class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        >
          <input
            class="sc-jTrPJq lbEfvE"
            type="checkbox"
          />
          <div
            class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
          />
        </div>
        <span>
          Second
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckBoxGroup disabled renders 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR etrfbY"
      disabled=""
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        disabled=""
      >
        <input
          class="sc-jTrPJq jupZsQ"
          disabled=""
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR etrfbY"
      disabled=""
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        disabled=""
      >
        <input
          class="sc-jTrPJq jupZsQ"
          disabled=""
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
          disabled=""
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR etrfbY"
      disabled=""
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        disabled=""
      >
        <input
          class="sc-jTrPJq jupZsQ"
          disabled=""
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR etrfbY"
      disabled=""
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
        disabled=""
      >
        <input
          class="sc-jTrPJq jupZsQ"
          disabled=""
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
          disabled=""
        />
      </div>
      <span>
        First
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup initial value renders 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        Maui
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          checked=""
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
        >
          <svg
            class="sc-hLseeU cULchQ"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Jerusalem
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          checked=""
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
        >
          <svg
            class="sc-hLseeU cULchQ"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        Wuhan
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup labelKey 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onChange 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
        >
          <svg
            class="sc-hLseeU cULchQ"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa ldipLt sc-jsMahE dNqhTy"
    role="group"
    tabindex="0"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
        >
          <svg
            class="sc-hLseeU cULchQ"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup onClick for check and uncheck a CheckBox 2`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa ldipLt sc-jsMahE dNqhTy"
    role="group"
    tabindex="0"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup options renders 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup value renders 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          checked=""
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa ZMcUn sc-gLDzan jBLWRN"
        >
          <svg
            class="sc-hLseeU cULchQ"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="M6,11.3 L10.3,16 L18,6.2"
              fill="none"
            />
          </svg>
        </div>
      </div>
      <span>
        First
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        Second
      </span>
    </label>
  </div>
</div>
`;

exports[`CheckBoxGroup valueKey 1`] = `
<div
  class="sc-beqWaB ePBzUb"
>
  <div
    class="sc-gueYoa bJAfQt sc-jsMahE dNqhTy"
    role="group"
  >
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        first-label
      </span>
    </label>
    <div
      class="sc-dmqHEX kOYIyd"
    />
    <label
      class="sc-eDDNvR fuPXtt"
    >
      <div
        class="sc-gueYoa fCVwxk sc-qRumB kOGCKW"
      >
        <input
          class="sc-jTrPJq lbEfvE"
          type="checkbox"
        />
        <div
          class="sc-gueYoa hZyCsD sc-gLDzan jBLWRN"
        />
      </div>
      <span>
        second-label
      </span>
    </label>
  </div>
</div>
`;
